# the-world

./: Cargo.toml  LICENSE-MIT  README.md
docs/01.需求分析/01.思维导图/: README.md  the world.mm  初稿.md  思维导图.md
src/: asset_loader.rs  asteroids.rs  chunk.rs  collision_detection.rs  debug.rs  despawn.rs  main.rs  movement.rs  rle_chunk.rs  spaceship.rs  voxel.rs
src/components/: id.rs  value.rs
src/events/: policy_events.rs  value_events.rs
src/example/: README.md  mod.rs  spaceship_game_plugins.rs
src/example/spaceship_game_plugins/: movement.rs  spaceship.rs
src/game/: game.rs
src/plugins/person_plugin/: person_plugin.rs
src/plugins/resource_system_plugin/: resource_components.rs  resource_plugin.rs
src/plugins/voxel_plugin/: voxel_plugin.rs
src/rescources/: game_state.rs
src/systems/: policy_systems.rs  turn.rs  value_systems.rs
