[package]
name = "world"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.22.0", features = [ "simd-stable", "debug-render-3d" ] }
bevy_voxel_world = "0.10.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
